# DonorBot

./: pyproject.toml
src/: .gitignore  constants.py
src/bot/: states.py
src/bot/dialogs/: __init__.py
src/bot/dialogs/main_menu/: getters.py  windows.py
src/bot/dialogs/reg/: __init__.py  getters.py  on_event.py  windows.py
src/bot/handlers/: common.py
src/bot/utils/: setup_bot.py
src/config/: models.py
src/db/: __init__.py  base.py  database.py  donor.py
src/db/models/: __init__.py  donor.py
src/db/repos/: __init__.py  abstract.py  donor.py
