[project]
name = "donorbot"
version = "0.1.0"
description = ""
authors = [
    {name = "WESHOK",email = "gdvarta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "aiogram-dialog (>=2.4.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "sulguk (>=0.8.0,<0.9.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncclick (>=8.1.8,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
packages = [{include = "donorbot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
